user_results_getting_implement
