# api-gateway/internal/routes/user_routes.go
@@ -11,4 +11,5 @@ func UserRoutes(r *gin.RouterGroup, authClient *client.AuthClient) {
 	user := r.Group("/user")
 	user.GET("/profile", middleware.AuthMiddleware([]string{"ADMIN", "USER"}, authClient), handlers.GetUserProfile)
 	user.PUT("/update-information", middleware.AuthMiddleware([]string{"USER"}, authClient), handlers.ChangeNameSurname)
+	user.GET("/get-my-results", middleware.AuthMiddleware([]string{"USER"}, authClient), handlers.GetMyResults)
 }
